Updates
Added some pages and confirmation dialogues, added Material-UI
