# swagger.json
@@ -344,6 +344,35 @@
           }
         }
       }
+    },
+    "/task/{task_id}" : {
+      "get" : {
+        "tags" : [ "Tasks" ],
+        "description" : "Returns task by ID",
+        "operationId" : "GetTaskByID",
+        "parameters" : [ {
+          "name" : "task_id",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          },
+          "400" : {
+            "description" : "Invalid request",
+            "schema" : {
+              "type" : "object",
+              "properties" : {
+                "message" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "securityDefinitions" : {
